[package]
name = "survivor_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "1"
sha3 = "0.10"
base64 = "0.21"